# C-Scaffold

./: .gitignore  CMakeLists.txt  README.md
src/: add_numbers.c  demo.c  foo.c
src/include/: add_numbers.h
test/: foo_mock.cpp  foo_mock.h  testgtest.cpp
tools/: demo_script.py  ruby_script.rb
